projects/qbsf/force-app/main/default/objects/QB_Integration_Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>Type of error encountered</description>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration Error</fullName>
            </value>
            <value>
                <fullName>API Error</fullName>
            </value>
            <value>
                <fullName>Configuration Error</fullName>
            </value>
            <value>
                <fullName>Payment Monitor Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>