projects/qbsf/force-app/main/default/objects/QB_Integration_Error_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Related Opportunity record</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>QB Integration Error Logs</relationshipLabel>
    <relationshipName>QB_Integration_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>